<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_mujoco</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="morten.veng@d-i-s.dk">Morten Veng</maintainer>
  <license>BSD2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libglfw3-dev</depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>ros_mujoco_interfaces</depend>

  <depend>depth_image_proc</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
