<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_mujoco_examples</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="morten.veng@d-i-s.dk">Morten Veng</maintainer>
  <license>BSD2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_mujoco</exec_depend>
  <exec_depend>ros_mujoco_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>